Delete unnecessary methods.